--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,10 +1,14 @@
+
+body {
+color:#444;
+font-family: sans-serif;
+border-top: 10px solid #1098ad;
+}
+
 h1,
 h2,
-h3,
-h4,
-p,
-li {
-  font-family: sans-serif;
+h3 {
+  color: #1098ad;
 }
 
 h1 {
@@ -36,10 +40,91 @@ p {
 li {
   font-size: 20px;
 }
-footer p {
+
+/* footer p {
+  font-size: 16px;
+} */
+
+/* article header p {
+font-style: italic;
+} */
+
+#author {
+  font-style: italic;
+  font-size: 18px;
+}
+
+#copyright {
   font-size: 16px;
 }
 
-article header p {
-font-style: italic;
+.related-author {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.related {
+  list-style: none;
+}
+
+.main-header{
+  background-color: #f7f7f7;
+}
+
+aside {
+  background-color #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+}
+
+li:first-child{
+  font-weight: bold;
+}
+
+li:last-child{
+  font-style: italic;
+}
+
+/* Styling links */
+
+a:link{
+  color:#1098ad;
+  text-decoration: none;
+}
+
+a:visited{
+  color:#1098ad;
+}
+
+a:hover{
+  color:orangered;
+  font-weight: bold;
+  text-decoration: underline orangered;
+}
+
+a:active{
+  background-color: black;
+  font-style: italic;
+}
+
+/* Resolving conflicts id->class->element*/
+/* #copyright {
+  color: red;
+}
+
+.copyright {
+  color: blue;
+}
+
+.text {
+  color: yellow;
+}
+
+footer p {
+  color: green !important;
+} */
+
+
+nav {
+  font-size: 18px;
 }
