--- a/starter/03-CSS-Fundamentals/challenge/style.css
+++ b/starter/03-CSS-Fundamentals/challenge/style.css
@@ -1,11 +1,18 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: sans-serif;
   line-height: 1.4;
 }
 
-/* #region PRODUCT */
+/* PRODUCT */
 .product {
-  border: 5px solid #000;
+  border: 4px solid black;
+  width: 825px;
+  margin: 50px auto;
 }
 
 .product-title {
@@ -13,58 +20,61 @@ body {
   font-size: 22px;
   text-transform: uppercase;
   background-color: #f7f7f7;
+  padding: 15px;
 }
-/* #endregion */
 
-/* #region SHOPPING */
+/* PRODUCT INFORMATION */
 .price {
   font-size: 24px;
 }
 
 .shipping {
-  color: #777;
-  text-transform: uppercase;
   font-size: 12px;
+  text-transform: uppercase;
   font-weight: bold;
-}
-/* #endregion */
-
-/* #region LINK */
-.more-info:link,.more-info:visited {
-  color: #000;
+  color: #777;
+  margin-bottom: 20px;
 }
 
-.more-info:hover,.more-info:active {
-  color: #000;
+.more-info:link, .more-info:visited {
+  color: black;
+}
+
+.more-info:hover, .more-info:active {
   text-decoration: none;
 }
 
-/* #endregion */
-
-/* #region PRODUCT DETAILS */
+/* PRODUCT DETAILS */
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
+  margin-bottom: 15px;
+  margin-top: 30px;
 }
 
 .details-list {
   list-style: square;
+  margin-left: 20px;
 }
-/* #endregion */
 
-/* #region ADD CART BUTTON */
+.details-list li {
+  margin-bottom: 10px;
+}
+
+/* BUTTON */
 .add-cart {
-  font-size: 20px;
-  border: none;
-  text-transform: uppercase;
   background-color: #000;
+  border: none;
   color: #fff;
+  font-size: 20px;
+  text-transform: uppercase;
   cursor: pointer;
+  padding: 15px;
+  width: 100%;
+  border-top: 4px solid black;
 }
 
 .add-cart:hover {
-  border: none;
-  background-color: #fff;
   color: #000;
+  background-color: #fff;
 }
-/* #endregion */
