--- a/starter/03-CSS-Fundamentals/style.css
+++ b/starter/03-CSS-Fundamentals/style.css
@@ -1,18 +1,20 @@
 * {
+  /* border-top: 10px solid #1098ad; */
   margin: 0;
   padding: 0;
 }
 
 /* PAGE SECTIONS */
-
 body {
   color: #444;
   font-family: sans-serif;
+
   border-top: 10px solid #1098ad;
+  position: relative;
 }
 
-.container{
-  width: 700px;
+.container {
+  width: 800px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
@@ -25,10 +27,12 @@ body {
   padding-right: 40px; */
   padding: 20px 40px;
   margin-bottom: 60px;
+  /* height: 80px; */
 }
 
 nav {
   font-size: 18px;
+  /* text-align: center; */
 }
 
 article {
@@ -36,7 +40,8 @@ article {
 }
 
 .post-header {
-margin-bottom: 40px;
+  margin-bottom: 40px;
+  /* position: relative; */
 }
 
 aside {
@@ -46,10 +51,10 @@ aside {
   /* padding-top: 50px;
   padding-bottom: 50px; */
   padding: 50px 0;
+  width: 500px;
 }
 
 /* SMALLER ELEMENTS */
-
 h1,
 h2,
 h3 {
@@ -64,13 +69,13 @@ h1 {
 
 h2 {
   font-size: 40px;
-  font-family: sas-serif;
   margin-bottom: 30px;
 }
 
 h3 {
   font-size: 30px;
   margin-bottom: 20px;
+  margin-top: 40px;
 }
 
 h4 {
@@ -85,26 +90,28 @@ p {
   margin-bottom: 15px;
 }
 
-ol,ul {
+ul,
+ol {
   margin-left: 50px;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 li {
   font-size: 20px;
   margin-bottom: 10px;
+  /* display: inline; */
 }
 
-li:last-child{
-  margin-bottom: 0px;
+li:last-child {
+  margin-bottom: 0;
 }
- 
+
 /* footer p {
   font-size: 16px;
 } */
 
 /* article header p {
-font-style: italic;
+  font-style: italic;
 } */
 
 #author {
@@ -121,9 +128,21 @@ font-style: italic;
   font-weight: bold;
 }
 
+/* ul {
+  list-style: none;
+} */
+
 .related {
   list-style: none;
 }
+
+body {
+  /* background-color: orangered; */
+}
+
+/* .first-li {
+  font-weight: bold;
+} */
 
 li:first-child {
   font-weight: bold;
@@ -133,14 +152,23 @@ li:last-child {
   font-style: italic;
 }
 
-/* Styling links */
+li:nth-child(even) {
+  /* color: red; */
+}
 
+/* Misconception: this won't work! */
+article p:first-child {
+  color: red;
+}
+
+/* Styling links */
 a:link {
   color: #1098ad;
   text-decoration: none;
 }
 
 a:visited {
+  /* color: #777; */
   color: #1098ad;
 }
 
@@ -154,18 +182,69 @@ a:active {
   background-color: black;
   font-style: italic;
 }
+/* LVHA */
+
+.post-img {
+  width: 100%;
+  height: auto;
+}
 
 nav a:link {
+  /* background-color: orangered;
+  margin: 20px;
+  padding: 20px;
+
+  display: block; */
+
   margin-right: 30px;
   margin-top: 10px;
   display: inline-block;
 }
 
-nav a:link:last-child{
+nav a:link:last-child {
   margin-right: 0;
 }
 
-/* Resolving conflicts id->class->element*/
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+
+  position: absolute;
+  /* top: 50px;
+  left: 50px; */
+  bottom: 50px;
+  right: 50px;
+}
+
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+
+h3 + p::first-line {
+  /* color: red; */
+}
+
+h2 {
+  /* background-color: orange; */
+  position: relative;
+}
+
+h2::before {
+  content: "TOP";
+  background-color: #ffe70e;
+  color: #444;
+  font-size: 16px;
+  font-weight: bold;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -25px;
+}
+
+/* Resolving conflicts */
 /* #copyright {
   color: red;
 }
@@ -182,3 +261,7 @@ footer p {
   color: green !important;
 } */
 
+/* nav a:link,
+nav p {
+  font-size: 18px;
+} */
